update activities